storage: update Segment to use Immutable collections.